create block styles block

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,11 @@
 
     {% block content %}
       
-    {% endblock %}
+    {% block styles %}
+    {{ super() }}
+    {{ simplemde.css }}
+    {{ simplemde.js }}
+    {% endblock %} 
 </body>
 
 </html>
