--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,10 +23,10 @@
         
         
     </ul>
-   
-
     {% block content %}
-      
+    
+    
+    {% endblock %} 
     {% block styles %}
     {{ super() }}
     {{ simplemde.css }}
