--- a/app/templates/error_page/404.html
+++ b/app/templates/error_page/404.html
@@ -1,6 +1,9 @@
 {% extends 'base.html'%}
 {%block content%}
-    <h1>WHOOOPSies, <br> we can't find that page!!</h1>
-    <img src="https://cdn-images-1.medium.com/max/1600/1*qdFdhbR00beEaIKDI_WDCw.gif" alt="404 error" style="margin: 0% 20% 20% 20%; width: 70rem" >
-
+    <div class="container">
+        <div class="jumbotron">
+            <h1>WHOOOPSies, <br> we can't find that page!!</h1>
+            <img src="https://cdn-images-1.medium.com/max/1600/1*qdFdhbR00beEaIKDI_WDCw.gif" alt="404 error" style="margin: 0% 20% 20% 20%; width: 70rem" >
+        </div>
+    </div>
 {%endblock%} 
