import the flask mail module

--- a/app/templates/pitch/new_pitch_comment.html
+++ b/app/templates/pitch/new_pitch_comment.html
@@ -21,7 +21,7 @@
 
         </div>
         <div class="col-md-5">
-            {{wtf.quick_form(form)}}
+            {{wtf.quick_form(comment_form)}}
             {{simplemde.load}}
         </div>
     </div>
