--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
     {% endblock %} 
     {% block styles %}
     {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
     {{ simplemde.css }}
     {{ simplemde.js }}
     {% endblock %} 
