--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pitch Perfect</title>
-    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css" media="all">
-</head>
-<body>
-    <ul class="nav">
-            <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('core.index') }}">Home</a>
-            </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('core.info') }}">About Us</a>
-            </li>
-        <li class="nav-link"><a href="{{url_for('blog_posts.create_post')}}">Create Post</a></li>
-        <li class="nav-link"><a href="{{url_for('users.account')}}">Profile</a></li>
-        <li class="nav-link"><a href="{{url_for('users.logout')}}">Log out</a></li>
-        <li class="nav-link"><a href="{{url_for('app.login')}}">Login</a></li>
-        <li class="nav-link"><a href="{{url_for('app.register')}}">Register</a></li>
-        
-        
-    </ul>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <ul class="nav navbar-nav navbar-right">
+                  {% if current_user.is_authenticated %}
+                  <li style="color:white;padding:15px;">{{current_user.username}}</li>
+                  <li><a href="{{url_for('main.profile', uname=current_user.username)}}">Profile</a></li>
+                  <li><a href="{{url_for('main.new_pitch', uname=current_user.username)}}">Post a Pitch</a></li>
+                  <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+                  {% else %}
+                  <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+                  {% endif %}
+                </ul>
+                
+                <a class="navbar-brand" href="/"> Home </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+            </div>
+
+        </div>
+    </div>
     {% block content %}
     
     
@@ -34,5 +45,5 @@
     {{ simplemde.js }}
     {% endblock %} 
 </body>
-
 </html>
+        
