--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,49 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="navbar navbar-inverse" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <ul class="nav navbar-nav navbar-right">
-                  {% if current_user.is_authenticated %}
-                  <li style="color:white;padding:15px;">{{current_user.username}}</li>
-                  <li><a href="{{url_for('main.profile', uname=current_user.username)}}">Profile</a></li>
-                  <li><a href="{{url_for('main.new_pitch', uname=current_user.username)}}">Post a Pitch</a></li>
-                  <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
-                  {% else %}
-                  <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-                  {% endif %}
-                </ul>
-                
-                <a class="navbar-brand" href="/"> Home </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
-            </div>
+{% extends 'bootstrap/base.html'%}
 
-        </div>
-    </div>
-    {% block content %}
+{% block navbar%}
+    {% include 'navbar.html'%}
+{% endblock%}
+
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
+{{ simplemde.css }}
+{{ simplemde.js }}
+{% endblock %} 
+
+
     
-    
-    {% endblock %} 
-    {% block styles %}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
-    {{ simplemde.css }}
-    {{ simplemde.js }}
-    {% endblock %} 
-</body>
-</html>
-        
+
